--- a/FilRouge2/MVVM/Views/ListOffresPage.xaml
+++ b/FilRouge2/MVVM/Views/ListOffresPage.xaml
@@ -11,6 +11,7 @@
     <Page.Resources>
         <local:StringToVisibilityConverter x:Key="StringToVisibilityConverter"/>
         <local:StringToHyperLinkConverter x:Key="StringToHyperlinkConverter"/>
+        <local:DateTimeToStringConverter x:Key="DateTimeToStringConverter"/>
     </Page.Resources>
 
     <Grid Name="MainGrid"
@@ -38,7 +39,7 @@
                             <ColumnDefinition Width="0.4*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Grid.Column="0" Text="{Binding TITRE}"/>
-                        <TextBlock Grid.Column="1" Text="{Binding DATEPUBLICATION}"/>
+                        <TextBlock Grid.Column="1" Text="{Binding DATEPUBLICATION, Converter={StaticResource DateTimeToStringConverter}}"/>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
@@ -75,8 +76,8 @@
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Column="0" Grid.Row="0" x:Uid="OffrePublishDateLabel" Style="{StaticResource BaseTextBlockStyle}" Text="Date de publication"/>
                 <TextBlock Grid.Column="1" Grid.Row="0" x:Uid="OffreEditDateLabel" Margin="3,0,0,0" Style="{StaticResource BaseTextBlockStyle}" Text="Dernière modification"/>
-                <TextBlock Grid.Column="0" Grid.Row="1" x:Uid="OffrePublishDate" Style="{StaticResource BaseTextBlockStyle}" Text="{Binding DateMin, Mode=TwoWay}"/>
-                <TextBlock Grid.Column="1" Grid.Row="1" x:Uid="OffreEditDate" Margin="3,0,0,0" Style="{StaticResource BaseTextBlockStyle}" Text="{Binding DateMax, Mode=TwoWay}"/>
+                <TextBlock Grid.Column="0" Grid.Row="1" x:Uid="OffrePublishDate" Style="{StaticResource BaseTextBlockStyle}" Text="{Binding DateMin, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource DateTimeToStringConverter}}"/>
+                <TextBlock Grid.Column="1" Grid.Row="1" x:Uid="OffreEditDate" Margin="3,0,0,0" Style="{StaticResource BaseTextBlockStyle}" Text="{Binding DateMax, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource DateTimeToStringConverter}}"/>
             </Grid>
             <TextBlock Grid.Row="5" x:Uid="OffreDescPreview" Margin="2" Style="{StaticResource BaseTextBlockStyle}" Text="{Binding Desc, Mode=TwoWay}"
                 TextTrimming="WordEllipsis"/>
