--- a/FilRouge2/MVVM/Views/ListOffresPage.xaml
+++ b/FilRouge2/MVVM/Views/ListOffresPage.xaml
@@ -76,8 +76,8 @@
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Column="0" Grid.Row="0" x:Uid="OffrePublishDateLabel" Style="{StaticResource BaseTextBlockStyle}" Text="Date de publication"/>
                 <TextBlock Grid.Column="1" Grid.Row="0" x:Uid="OffreEditDateLabel" Margin="3,0,0,0" Style="{StaticResource BaseTextBlockStyle}" Text="Dernière modification"/>
-                <TextBlock Grid.Column="0" Grid.Row="1" x:Uid="OffrePublishDate" Style="{StaticResource BaseTextBlockStyle}" Text="{Binding DateMin, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource DateTimeToStringConverter}}"/>
-                <TextBlock Grid.Column="1" Grid.Row="1" x:Uid="OffreEditDate" Margin="3,0,0,0" Style="{StaticResource BaseTextBlockStyle}" Text="{Binding DateMax, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource DateTimeToStringConverter}}"/>
+                <TextBlock Grid.Column="0" Grid.Row="1" x:Uid="OffrePublishDate" Style="{StaticResource BaseTextBlockStyle}" Text="{Binding PublicationDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource DateTimeToStringConverter}}"/>
+                <TextBlock Grid.Column="1" Grid.Row="1" x:Uid="OffreEditDate" Margin="3,0,0,0" Style="{StaticResource BaseTextBlockStyle}" Text="{Binding LastEditionDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource DateTimeToStringConverter}}"/>
             </Grid>
             <TextBlock Grid.Row="5" x:Uid="OffreDescPreview" Margin="2" Style="{StaticResource BaseTextBlockStyle}" Text="{Binding Desc, Mode=TwoWay}"
                 TextTrimming="WordEllipsis"/>
